#21: [Test] Promise result (http://github.com/fb71/areca/issues/21)
Promise rework + AsyncTestRunner

- TODO: multiple promised ...
- ReflectAnnotationProcessor: invoke() return value
- .stream() calls repaced by Sequence :)